--- a/data_wrangling_2.Rmd
+++ b/data_wrangling_2.Rmd
@@ -125,7 +125,23 @@ reviews = tibble(
 
 
 
-## Using an API
+## Using an API w/ Water Consumption in NYC
+```{r}
+nyc_water = 
+  GET("https://data.cityofnewyork.us/resource/ia2d-e54m.csv") %>% 
+  content("parsed")
+
+# Get = helps us get a URL. Can be JSON or CSV (CSV might be easier?)
+# Content = Extract content from a request
+```
+
+More examples for API Extraction
+```{r}
+poke =
+  GET("http://pokeapi.co/api/v2/pokemon/1") %>%
+  content()
+```
+
 
 
 
