First commit for strings and vector lecture

--- a/data_wrangling_2.Rmd
+++ b/data_wrangling_2.Rmd
@@ -146,3 +146,88 @@ poke =
 
 
 
+# Lecture: Strings vs. Factors
+Both look like character vectors, but strings are just like strings. Factors have an underlying numeric structure. Stringr package is what we will be using!
+
+Regular expressions = naming things in r, what you have named, you might need to search for them.
+
+Factors = few categorical variables siting on top of each other. Forcats package.
+-when you use linear models, need reference categories
+- have to be in control of factor variables
+-for categorical variables and anagram for factors
+
+##Strings and Regex
+```{r}
+library(p8105.datasets)
+
+string_vec = c("my", "name", "is", "jeff")
+
+str_detect(string_vec, "jeff")
+#str prefix: every function that we want to use in stringr package is this. We can scroll through str to see what exists. str_detect detects whether "jeff" is in each of the strings. It doesn't exist in the first 3, but it does in the last.
+```
+
+str_replace
+```{r}
+str_replace(string_vec, "jeff", "Jeff")
+```
+
+New string vector
+```{r}
+string_vec = c(
+  "i think we all rule for participating",
+  "i think i have been caught",
+  "i think this will be quite fun actually",
+  "it will be fun, i think"
+  )
+str_detect(string_vec, "^i think")
+# ^ is start of a string variable
+
+str_detect(string_vec, "^i think$")
+# $ends with a string variable
+```
+
+New string vector
+```{r}
+string_vec = c(
+  "Y'all remember Pres. HW Bush?",
+  "I saw a green bush",
+  "BBQ and Bushwalking at Molonglo Gorge",
+  "BUSH -- LIVE IN CONCERT!!"
+  )
+str_detect(string_vec, "[Bb]ush")
+# detecting any match of "bush". Either start with a capital B or lowercase b. Doesn't detect all caps!
+```
+
+New string vector
+```{r}
+string_vec = c(
+  '7th inning stretch',
+  '1st half soon to begin. Texas won the toss.',
+  'she is 5 feet 4 inches tall',
+  '3AM - cant sleep :('
+  )
+str_detect(string_vec, "[0-9][a-zA-Z]")
+# any number from 0-9, followed by any letter lower case a-z to upper case a-z
+```
+
+New string vector
+```{r}
+string_vec = c(
+  'Its 7:11 in the evening',
+  'want to go to 7-11?',
+  'my flight is AA711',
+  'NetBios: scanning ip 203.167.114.66'
+  )
+str_detect(string_vec, "7.11")
+# finds 7 number followed by 11. . matches any character at all. AA711 doesn't count bc no character in between 7 and
+```
+
+
+
+
+
+
+
+
+
+
